--- a/2018/1/MAT220E/9/enunciado.tex
+++ b/2018/1/MAT220E/9/enunciado.tex
@@ -120,6 +120,8 @@
 \task $f(x) = cos(x)$
 \task $f(x) = \dfrac{1}{1-x}$
 \end{tasks}
+\item Determinar, utilizando series de potencias, el valor de
+	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
 \item Sea la función
 	$$f(x) = ln(1+x)$$
 	Exprese $f(x)$ como una serie de potencias
