--- a/2018/1/MAT220E/9/solucion.tex
+++ b/2018/1/MAT220E/9/solucion.tex
@@ -127,6 +127,25 @@
 \item 
 \end{enumerate}
 \end{solucion}
+\item Determinar, utilizando series de potencias, el valor de
+	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
+\begin{solucion}
+Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
+		Luego, debemos buscar una serie de potencias que se asemeje a lo que estamos buscando, esta sería
+		$$f(x) = \sum\limits_{n=1}^\infty x^{n}$$
+		Entonces, debemos encontrar $f\left(\dfrac{1}{3}\right)$
+		
+		Tenemos que
+		$$f(x) 
+		= \sum\limits_{n=1}^\infty x^{n} 
+		= \sum\limits_{n=0}^\infty x^{n+1}
+		= x\sum\limits_{n=0}^\infty x^{n}
+		= x \dfrac{1}{1-x}
+		= \dfrac{x}{1-x}$$
+		Como $x = \dfrac{1}{3}$ esta dentro del radio de convergencia de la serie, podremos evaluar la seríe ahí. Finalmente,
+		$$\sum\limits_{n=1}^\infty \frac{1}{3^n} = f\left(\dfrac{1}{3}\right) = \dfrac{\dfrac{1}{3}}{1-\dfrac{1}{3}}
+		= \dfrac{\dfrac{1}{3}}{\dfrac{2}{3}} = \dfrac{1}{2}$$
+\end{solucion}
 \item Sea la función
 	$$f(x) = ln(1+x)$$
 	Exprese $f(x)$ como una serie de potencias
