--- a/2019/2/MAT1620/5/enunciado.tex
+++ b/2019/2/MAT1620/5/enunciado.tex
@@ -115,5 +115,19 @@
 \end{center}
 
 \begin{preguntas}
+\item Para cada función, encontrar la serie de Maclaurin que la representa
+\begin{tasks}(2)
+\task $f(x) = cos(x)$
+\task $f(x) = \dfrac{1}{1-x}$
+\end{tasks}
+\item Determinar, utilizando series de potencias, el valor de
+	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
+\item Sea la función
+	$$f(x) = ln(1+x)$$
+	Exprese $f(x)$ como una serie de potencias
+\item Expresar la siguiente serie de potencias como una función
+	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
+\item Calcule el valor de 
+	$$\sum\limits_{n=1}^{\infty}\dfrac{(-1)^n(n+1)}{n^2(n+2)^2}$$
 \end{preguntas}
 \end{document}
