--- a/2019/2/MAT1620/5/enunciado.tex
+++ b/2019/2/MAT1620/5/enunciado.tex
@@ -115,13 +115,19 @@
 \end{center}
 
 \begin{preguntas}
-\item Determinar, utilizando series de potencias, el valor de
-	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
-\item Sea la función
-	$$f(x) = ln(1+x)$$
-	Exprese $f(x)$ como una serie de potencias
+\item Escribir las siguientes funciones como una serie de potencias
+\begin{enumerate}[a)]
+\item $f(x) = \dfrac{1}{x^2-4x+20}$
+\item $f(x) = ln(1+x)$
+\end{enumerate}
 \item Expresar la siguiente serie de potencias como una función
 	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
+\item $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
+\item $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
+\item $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
+\end{enumerate}
 \item Calcule el valor de 
 	$$\sum\limits_{n=1}^{\infty}\dfrac{(-1)^n(n+1)}{n^2(n+2)^2}$$
 \item Para cada función, encontrar la serie de Maclaurin que la representa
