Solución de 2019/2/MAT1620/5

--- a/2019/2/MAT1620/5/solucion.tex
+++ b/2019/2/MAT1620/5/solucion.tex
@@ -115,30 +115,16 @@
 \end{center}
 
 \begin{preguntas}
-\item Determinar, utilizando series de potencias, el valor de
-	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
+\item Escribir las siguientes funciones como una serie de potencias
+\begin{enumerate}[a)]
+\item $f(x) = \dfrac{1}{x^2-4x+20}$
+\item $f(x) = ln(1+x)$
+\end{enumerate}
 \begin{solucion}
 Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
-		Luego, debemos buscar una serie de potencias que se asemeje a lo que estamos buscando, esta sería
-		$$f(x) = \sum\limits_{n=1}^\infty x^{n}$$
-		Entonces, debemos encontrar $f\left(\dfrac{1}{3}\right)$
-		
-		Tenemos que
-		$$f(x) 
-		= \sum\limits_{n=1}^\infty x^{n} 
-		= \sum\limits_{n=0}^\infty x^{n+1}
-		= x\sum\limits_{n=0}^\infty x^{n}
-		= x \dfrac{1}{1-x}
-		= \dfrac{x}{1-x}$$
-		Como $x = \dfrac{1}{3}$ esta dentro del radio de convergencia de la serie, podremos evaluar la seríe ahí. Finalmente,
-		$$\sum\limits_{n=1}^\infty \frac{1}{3^n} = f\left(\dfrac{1}{3}\right) = \dfrac{\dfrac{1}{3}}{1-\dfrac{1}{3}}
-		= \dfrac{\dfrac{1}{3}}{\dfrac{2}{3}} = \dfrac{1}{2}$$
-\end{solucion}
-\item Sea la función
-	$$f(x) = ln(1+x)$$
-	Exprese $f(x)$ como una serie de potencias
-\begin{solucion}
-Es evidente que no podemos convertir la función directamente a una serie, por lo que probaremos derivandola antes.
+\begin{enumerate}[a)]
+\item 
+\item Es evidente que no podemos convertir la función directamente a una serie, por lo que probaremos derivandola antes.
 		$$f'(x) = \dfrac{1}{1+x}$$
 		Esta función si podemos convertirla en una serie usando $\dfrac{1}{1-x} = \sum\limits_{n=0}^{\infty} x^n$. Entonces,
 		$$f'(x) = \dfrac{1}{1-(-x)} 
@@ -152,11 +138,23 @@ Es evidente que no podemos convertir la función directamente a una serie, por l
 		= \int \sum\limits_{n=0}^{\infty} (-1)^n x^n dx
 		= \sum\limits_{n=0}^{\infty} \int (-1)^n x^n dx
 		= \sum\limits_{n=0}^{\infty} (-1)^n \dfrac{x^{n+1}}{n+1}$$
+\end{enumerate}
 \end{solucion}
 \item Expresar la siguiente serie de potencias como una función
 	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
+\item $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
+\item $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
+\item $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
+\end{enumerate}
 \begin{solucion}
-Sea 
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\item Sea 
 		$$f(x) = \sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
 		En este caso, lo que nos molesta es el $n$ del denominador, por lo que intentaremos derivando la serie. De manera análoga, para hacer esto solo tenemos que derivar el término general de esta, esto es,
 		$$f'(x) 
@@ -181,6 +179,7 @@ Sea
 		$$f\left(\dfrac{3}{2}\right) = -ln(5-3) + c = 0 \ra c = ln(2)$$
 		Finalmente,
 		$$f(x) = -ln(5-2x) + ln(2) = ln\left(\dfrac{2}{5-2x}\right)$$
+\end{enumerate}
 \end{solucion}
 \item Calcule el valor de 
 	$$\sum\limits_{n=1}^{\infty}\dfrac{(-1)^n(n+1)}{n^2(n+2)^2}$$
