Enunciado de 2019/2/MAT1620/5

--- a/2019/2/MAT1620/5/enunciado.tex
+++ b/2019/2/MAT1620/5/enunciado.tex
@@ -115,6 +115,8 @@
 \end{center}
 
 \begin{preguntas}
+\item Determinar, utilizando series de potencias, el valor de
+	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
 \item Escribir las siguientes funciones como una serie de potencias
 \begin{enumerate}[a)]
 \item $f(x) = \dfrac{1}{x^2-4x+20}$
@@ -135,5 +137,6 @@
 \task $f(x) = cos(x)$
 \task $f(x) = \dfrac{1}{1-x}$
 \end{tasks}
+\item Encontrar una aproximación de $\sqrt[]{101}$ con un error máximo de $10^{-3}$
 \end{preguntas}
 \end{document}
