Solución de 2019/2/MAT1620/5

--- a/2019/2/MAT1620/5/solucion.tex
+++ b/2019/2/MAT1620/5/solucion.tex
@@ -135,10 +135,10 @@ Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 		= \dfrac{\dfrac{1}{3}}{\dfrac{2}{3}} = \dfrac{1}{2}$$
 \end{solucion}
 \item Escribir las siguientes funciones como una serie de potencias
-\begin{enumerate}[a)]
-\item $f(x) = \dfrac{1}{x^2-4x+20}$
-\item $f(x) = ln(1+x)$
-\end{enumerate}
+\begin{tasks}(2)
+\task $f(x) = \dfrac{1}{x^2-4x+20}$
+\task $f(x) = ln(1+x)$
+\end{tasks}
 \begin{solucion}
 Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 \begin{enumerate}[a)]
@@ -161,12 +161,12 @@ Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 \end{solucion}
 \item Expresar la siguiente serie de potencias como una función
 	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
-\begin{enumerate}[a)]
-\item $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
-\item $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
-\item $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
-\item $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
-\end{enumerate}
+\begin{tasks}(2)
+\task $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
+\task $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
+\end{tasks}
 \begin{solucion}
 
 \begin{enumerate}[a)]
