Enunciado de 2019/2/MAT1620/5

--- a/2019/2/MAT1620/5/enunciado.tex
+++ b/2019/2/MAT1620/5/enunciado.tex
@@ -122,8 +122,7 @@
 \task $f(x) = \dfrac{1}{x^2-4x+20}$
 \task $f(x) = ln(1+x)$
 \end{tasks}
-\item Expresar la siguiente serie de potencias como una función
-	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
+\item Expresar las siguientes series de potencias como una función
 \begin{tasks}(2)
 \task $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
 \task $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
