Solución de 2019/2/MAT1620/5

--- a/2019/2/MAT1620/5/solucion.tex
+++ b/2019/2/MAT1620/5/solucion.tex
@@ -159,8 +159,7 @@ Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 		= \sum\limits_{n=0}^{\infty} (-1)^n \dfrac{x^{n+1}}{n+1}$$
 \end{enumerate}
 \end{solucion}
-\item Expresar la siguiente serie de potencias como una función
-	$$\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
+\item Expresar las siguientes series de potencias como una función
 \begin{tasks}(2)
 \task $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
 \task $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
