--- a/2019/2/MAT1620/5/enunciado.tex
+++ b/2019/2/MAT1620/5/enunciado.tex
@@ -129,6 +129,8 @@
 \task $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
 \task $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
 \end{tasks}
+\item Determinar el valor de la siguiente serie
+	$$ \sum\limits_{n=2}^{\infty}\dfrac{n^2+n}{3^{n-1}} $$
 \item Para cada función, encontrar la serie de Maclaurin que la representa
 \begin{tasks}(2)
 \task $f(x) = cos(x)$
