Solución de 2019/2/MAT1620/5

--- a/2019/2/MAT1620/5/solucion.tex
+++ b/2019/2/MAT1620/5/solucion.tex
@@ -199,6 +199,11 @@ Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 		$$f(x) = -ln(5-2x) + ln(2) = ln\left(\dfrac{2}{5-2x}\right)$$
 \end{enumerate}
 \end{solucion}
+\item Determinar el valor de la siguiente serie
+	$$ \sum\limits_{n=2}^{\infty}\dfrac{n^2+n}{3^{n-1}} $$
+\begin{solucion}
+
+\end{solucion}
 \item Para cada función, encontrar la serie de Maclaurin que la representa
 \begin{tasks}(2)
 \task $f(x) = cos(x)$
