--- a/2019/2/MAT1620/5/solucion.tex
+++ b/2019/2/MAT1620/5/solucion.tex
@@ -123,8 +123,32 @@
 \begin{solucion}
 Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 \begin{enumerate}[a)]
-\item 
-\item Es evidente que no podemos convertir la función directamente a una serie, por lo que probaremos derivandola antes.
+\item $f(x) = \dfrac{1}{x^2-4x+20}$\\
+\\
+Debemos reescribir la función para que se asemeje a la formula de más arriba. Para esto, debemos completar cuadrados, esto es
+$$f(x) = \dfrac{1}{x^2-4x+20}
+= \dfrac{1}{16 + (x^2-4x+4)}
+= \dfrac{1}{16 + (x-2)^2}$$
+Ahora, debemos convertir el 16 en un 1, para esto, basta con factorizar, es decir
+$$ f(x)
+= \dfrac{1}{16 + (x-2)^2}
+= \dfrac{1}{16}\cdot \dfrac{1}{1 + \frac{(x-2)^2}{16}}
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(\frac{x-2}{4}\right)^2}
+$$
+Por último, necesitamos un signo menos luego del 1.
+$$ f(x)
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(\frac{x-2}{4}\right)}
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(-\left(\frac{x-2}{4}\right)^2\right)}
+$$
+Aplicando la formula,
+$$ f(x)
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(-\left(\frac{x-2}{4}\right)^2\right)}
+= \sum\limits_{n=0}^{\infty} \left(-\left(\frac{x-2}{4}\right)^2\right)^n
+= \sum\limits_{n=0}^{\infty} (-1)^n \dfrac{(x-2)^{2n}}{16^n}
+$$
+\item $f(x) = ln(1+x)$\\
+\\
+Es evidente que no podemos convertir la función directamente a una serie, por lo que probaremos derivandola antes.
 		$$f'(x) = \dfrac{1}{1+x}$$
 		Esta función si podemos convertirla en una serie usando $\dfrac{1}{1-x} = \sum\limits_{n=0}^{\infty} x^n$. Entonces,
 		$$f'(x) = \dfrac{1}{1-(-x)} 
@@ -149,10 +173,33 @@ Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 \end{tasks}
 \begin{solucion}
 
+	Para hacer esto debemos seguir los siguientes pasos
+	\begin{itemize}
+		\item Hacer que la serie comience del 0
+		\item Mover todo hacia afuera de tal forma de que todos los exponentes sean $n$
+		\item Aplicar $\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$
+		\item Simplificar
+	\end{itemize}
 \begin{enumerate}[a)]
-\item 
-\item 
-\item 
+\item $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}
+= \sum\limits_{n=0}^\infty \dfrac{x^{n+2}}{2^{n+1}}
+= \dfrac{x^2}{2} \sum\limits_{n=0}^\infty \left(\dfrac{x}{2}\right)^n
+= \dfrac{x^2}{2} \dfrac{1}{1-\frac{x}{2}}
+= \dfrac{x^2}{2-x}
+$
+\item $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}
+= \sum\limits_{n=0}^\infty \dfrac{(-1)^{n+1} (3x+1)^{n}}{5^{n+1}}
+= -\dfrac{1}{5} \sum\limits_{n=0}^\infty \dfrac{(-1)^{n} (3x+1)^{n}}{5^{n}}$\\
+$
+= -\dfrac{1}{5} \sum\limits_{n=0}^\infty \left(\dfrac{-(3x+1)}{5}\right)^n
+= -\dfrac{1}{5} \cdot \dfrac{1}{1-\left(\frac{-(3x+1)}{5}\right)}
+= \dfrac{-1}{3x+6}
+$
+\item $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}
+= \sum\limits_{n=0}^\infty \left(\dfrac{x^2}{4}\right)^n
+= \dfrac{1}{1-\frac{x}{4}}
+= \dfrac{4}{4-x^2}	
+$
 \item Sea 
 		$$f(x) = \sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
 		En este caso, lo que nos molesta es el $n$ del denominador, por lo que intentaremos derivando la serie. De manera análoga, para hacer esto solo tenemos que derivar el término general de esta, esto es,
