--- a/2019/2/MAT1620/5/solucion.tex
+++ b/2019/2/MAT1620/5/solucion.tex
@@ -249,7 +249,49 @@ Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
 \item Determinar el valor de la siguiente serie
 	$$ \sum\limits_{n=2}^{\infty}\dfrac{n^2+n}{3^{n-1}} $$
 \begin{solucion}
+En primer lugar, notemos que la serie se puede escribir como
+$$ \sum\limits_{n=2}^{\infty}\dfrac{n(n+1)}{3^{n-1}} $$
+Lo que nos da problema es el $n(n+1)$, sin embargo, notemos que este esta en el numerador, por lo que debemos convertir la serie en una serie de potencias apropiada para poder integrarla.	\\
+\\
+Sea
+$$f(x) = \sum\limits_{n=2}^{\infty}\dfrac{n(n+1)}{3^{n-1}} x^{n-1} $$
+Debemos encontrar el valor de $f(1)$\\
 
+Integramos,
+$$\int f(x)dx 
+= \sum\limits_{n=2}^{\infty}\dfrac{\cancel{n}(n+1)}{3^{n-1}} \dfrac{x^n}{\cancel{n}} 
+= \sum\limits_{n=2}^{\infty}\dfrac{n+1}{3^{n-1}} x^n$$
+Integramos  nuevamente,
+$$\iint f(x)dxdx 
+= \sum\limits_{n=2}^{\infty}\dfrac{\cancel{n+1}}{3^{n-1}} \dfrac{x^{n+1}}{\cancel{n+1}} 
+= \sum\limits_{n=2}^{\infty}\dfrac{x^{n+1}}{3^{n-1}}$$
+Notemos que
+$$\sum\limits_{n=2}^{\infty}\dfrac{x^{n+1}}{3^{n-1}}
+= \sum\limits_{n=0}^{\infty}\dfrac{x^{n+3}}{3^{n+1}}
+= \dfrac{x^3}{3}\sum\limits_{n=0}^{\infty}\left(\dfrac{x}{3}\right)^n
+= \dfrac{x^3}{3}\dfrac{1}{1-\dfrac{x}{3}}
+= \dfrac{x^3}{3-x}$$
+Por lo que
+$$\iint f(x)dxdx 
+= \dfrac{x^3}{3-x}$$
+Derivamos,
+$$\int f(x)dx
+= \left(\dfrac{x^3}{3-x}\right)' 
+= \dfrac{9x^2-2x^3}{(3-x)^2}
+$$
+Derivamos nuevamente,
+$$f(x)
+= \left(\dfrac{9x^2-2x^3}{(3-x)^2}\right)' 
+= \dfrac{(18x-6x^2)(3-x)^2 + 2(3-x)(9x^2-2x^3)}{(3-x)^4}
+$$
+Finalmente,
+$$f(1)
+= \dfrac{(18-6)(3-1)^2 + 2(3-1)(9-2)}{(3-1)^4}
+=\dfrac{19}{4}
+$$
+Por lo que
+$$ \sum\limits_{n=2}^{\infty}\dfrac{n(n+1)}{3^{n-1}} 
+=\dfrac{19}{4}$$
 \end{solucion}
 \item Para cada función, encontrar la serie de Maclaurin que la representa
 \begin{tasks}(2)
