--- a/2018/1/MAT220E/10/enunciado.tex
+++ b/2018/1/MAT220E/10/enunciado.tex
@@ -115,5 +115,30 @@
 \end{center}
 
 \begin{preguntas}
+\item Grafique las curvas de nivel de la función 
+	$$ f(x,y) = \sqrt[]{9-x^2-y^2}$$
+	para $k=0,1,2,3$
+\item Determinar si los siguientes limites existen o no. En caso de que existan, calcule su valor
+\begin{tasks}(4)
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{5x^2y}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{xy}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2ye^y}{x^4+y^2}$
+\end{tasks}
+\item Determine la derivada por definición en $x$ de la función
+	$$f(x,y) = 2xy + x^2y + x + y$$
+\item Para las siguientes funciones, calcular $f_x$ y $f_y$
+\begin{enumerate}[a)]
+\item $f(x,y) = \dfrac{xy}{x-y}$
+\item $f(x,y) = (x^2+y^2)sen\left(\dfrac{1}{x^2+y^2}\right)$
+\end{enumerate}
+\item Una función armónica es aquella que cumple con $f_{xx} + f_{yy} = 0$. Determina si la siguiente funcion es armónica
+	$$f(x,y) = xy + 3x^2 -y^3$$
+\item Busque $\dfrac{\delta z}{\delta t}$ o $\dfrac{\delta w}{\delta t}$, según corresponda.
+\begin{enumerate}[a)]
+\item $z = x^2+y^2+xy$\tab$x=sen(t), y=e^t$
+\item $w=xe^{y/z}$\tab$x=t^2, y=1-t, z=1+2t$
+\item $w=ln(\sqrt[]{x^2+y^2+z^2})$\tab$x=sen(t), y=cos(t), z=tan(t)$
+\end{enumerate}
 \end{preguntas}
 \end{document}
