--- a/2018/1/MAT220E/10/solucion.tex
+++ b/2018/1/MAT220E/10/solucion.tex
@@ -22,6 +22,7 @@
 \usepackage{xpatch}
 \usepackage{tkz-euclide}
 \usetkzobj{all}
+\usepackage{tabto}
 \xpatchcmd{\tkzTabLine}{$0$}{$\bullet$}{}{}
 
 \setlength{\headheight}{10pt}
