--- a/2019/2/MAT1620/6/enunciado.tex
+++ b/2019/2/MAT1620/6/enunciado.tex
@@ -116,5 +116,20 @@
 \end{center}
 
 \begin{preguntas}
+\item Determina el dominio de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x, y) = \sqrt[]{x+y} + \ln(x^2+y^2)$
+\task $f(x,y) = \dfrac{x+y}{x^2-y^2}$
+\task $f(x,y,z) = ln(z+y) - \dfrac{1}{x^2 +z^2}
+\task $f(x,y,z) = \sqrt[]{\ln(x+y+z)}$
+\end{tasks}
+\item Determina el recorrido de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x,y) = x^2 + y^2 + 3$
+\task $f(x,y,z) = \ln(\sqrt[]{x^2+y^2+4}) + z^2$
+\end{tasks}
+\item Grafique las curvas de nivel de la función 
+	$$ f(x,y) = \sqrt[]{9-x^2-y^2}$$
+	para $k=0,1,2,3$
 \end{preguntas}
 \end{document}
