Solución de 2019/2/MAT1620/6

--- a/2019/2/MAT1620/6/solucion.tex
+++ b/2019/2/MAT1620/6/solucion.tex
@@ -116,5 +116,53 @@
 \end{center}
 
 \begin{preguntas}
+\item Determina el dominio de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x, y) = \sqrt[]{x+y} + \ln(x^2+y^2)$
+\task $f(x,y) = \dfrac{x+y}{x^2-y^2}$
+\task $f(x,y,z) = ln(z+y) - \dfrac{1}{x^2 +z^2}
+\task $f(x,y,z) = \sqrt[]{\ln(x+y+z)}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
+\item Determina el recorrido de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x,y) = x^2 + y^2 + 3$
+\task $f(x,y,z) = \ln(\sqrt[]{x^2+y^2+4}) + z^2$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
+\item Grafique las curvas de nivel de la función 
+	$$ f(x,y) = \sqrt[]{9-x^2-y^2}$$
+	para $k=0,1,2,3$
+\begin{solucion}
+
+		Las curvas de nivel de la función corresponden a
+		$$\sqrt[]{9-x^2-y^2} = k \ra 9-x^2-y^2 = k^2 \ra x^2+y^2 = 9-k^2$$
+		Notemos que esto corresponde a circunferencias de radio $\sqrt[]{9-k^2}$.
+		
+		Reemplazando con los valores de $k$ indicados, las curvas de nivel a graficar son
+		$$k = 0 \ra x^2+y^2 = 9$$
+		$$k = 1 \ra x^2+y^2 = 8$$
+		$$k = 2 \ra x^2+y^2 = 5$$
+		$$k = 3 \ra x^2+y^2 = 0$$
+		Graficando,
+		
+		\begin{center}
+			\includegraphics[scale=0.4]{../../../../img/curvasdenivel}			
+		\end{center}
+\end{solucion}
 \end{preguntas}
 \end{document}
