Enunciado de 2019/2/MAT1620/6

--- a/2019/2/MAT1620/6/enunciado.tex
+++ b/2019/2/MAT1620/6/enunciado.tex
@@ -120,7 +120,7 @@
 \begin{tasks}(2)
 \task $f(x, y) = \sqrt[]{x+y} + \ln(x^2+y^2)$
 \task $f(x,y) = \dfrac{x+y}{x^2-y^2}$
-\task $f(x,y,z) = ln(z+y) - \dfrac{1}{x^2 +z^2}
+\task $f(x,y,z) = ln(z+y) - \dfrac{1}{x^2 +z^2}$
 \task $f(x,y,z) = \sqrt[]{\ln(x+y+z)}$
 \end{tasks}
 \item Determina el recorrido de las siguientes funciones
