Solución de 2019/2/MAT1620/6

--- a/2019/2/MAT1620/6/solucion.tex
+++ b/2019/2/MAT1620/6/solucion.tex
@@ -129,7 +129,7 @@
 \item $f(x, y) = \sqrt[]{x+y} + \ln(x^2+y^2)$\\
 \\
 Notemos que hay dos restricciones que se deben cumplir. La raiz no debe tener argumento negativo y el logaritmo debe tener argumento positivo. Luego, el dominio de la función es
-$$Dom(f) = \{(x,y) \in \R^2 | x + y \geq 0 \wedge x^2 + y^2 > 0\}
+$$Dom(f) = \{(x,y) \in \R^2 | x + y \geq 0 \wedge x^2 + y^2 > 0\}$$
 \item $f(x,y) = \dfrac{x+y}{x^2-y^2}$\\
 \\
 En este caso nuestra unica restricción es que el denominador sea distinto de 0, por lo que debe ocurrir que
