Enunciado de 2019/2/MAT1620/7

--- a/2019/2/MAT1620/7/enunciado.tex
+++ b/2019/2/MAT1620/7/enunciado.tex
@@ -116,5 +116,29 @@
 \end{center}
 
 \begin{preguntas}
+\item Determinar si los siguientes limites existen o no. En caso de que existan, calcule su valor
+\begin{tasks}(6)
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{5x^2y}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{xy}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2ye^y}{x^4+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2y}{x^4+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{sen(x^2+y^2)}{x^2+y^2}$
+\end{tasks}
+\item Dada la función 
+	$$ f(x) = 
+	\begin{cases}
+	\dfrac{x^4y^3}{3x^2+2y^2} & si\ (x,y) \neq (0,0) \\
+	0 & si\ (x,y) = (0,0)
+	\end{cases}
+	$$
+	determinar si es continua en todo $\R^2$ o no.
+\item Determine el conjunto de puntos en los cuales la función es continua
+	$$f(x,y) = 
+	\begin{cases}
+	\dfrac{x^3y^2}{x^2+2y^2} & (x,y) \neq (0,0)\\
+	1 & (x,y) = (0,0)
+	\end{cases}
+	$$
 \end{preguntas}
 \end{document}
