Enunciado de 2019/2/MAT1620/7

--- a/2019/2/MAT1620/7/enunciado.tex
+++ b/2019/2/MAT1620/7/enunciado.tex
@@ -122,8 +122,8 @@
 \task $\lim\limits_{(x,y) \to (0,0)} \dfrac{5x^2y}{x^2+y^2}$
 \task $\lim\limits_{(x,y) \to (0,0)} \dfrac{xy}{x^2+y^2}$
 \task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2ye^y}{x^4+y^2}$
-\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2y}{x^4+y^2}$
 \task $\lim\limits_{(x,y) \to (0,0)} \dfrac{sen(x^2+y^2)}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{sen(xy)}{xy}$
 \end{tasks}
 \item Dada la función 
 	$$ f(x) = 
