--- a/2019/2/MAT1620/8/enunciado.tex
+++ b/2019/2/MAT1620/8/enunciado.tex
@@ -131,5 +131,11 @@
 \item $w=xe^{y/z}$\tab$x=t^2, y=1-t, z=1+2t$
 \item $w=ln(\sqrt[]{x^2+y^2+z^2})$\tab$x=sen(t), y=cos(t), z=tan(t)$
 \end{enumerate}
+\item Sea $f$ una función con segundas derivadas parciales continuas en todo $R^2$. El cambio de variables $x=uv$, $y=\dfrac{u^2-v^2}{2}$ transforma la función $f(x,y)$ en la función $g(u,v)$.
+\begin{enumerate}[a)]
+\item Calcule $\dfrac{\delta g}{\delta u}, \dfrac{\delta g}{\delta v}$ en terminos de las derivadas parciales de $f$.
+\item Si $f_{xx}(x,y) + f_{yy}(x,y) = 2$ para todo $(x,y) \in R^2$, determine las constantes $a,b \in \R$ tales que
+		$$a\dfrac{\delta^2g}{\delta u^2} - b\dfrac{\delta^2 g}{\delta v^2} = u^2 + v^2$$
+\end{enumerate}
 \end{preguntas}
 \end{document}
