Solución de 2018/1/MAT220E/11

--- a/2018/1/MAT220E/11/solucion.tex
+++ b/2018/1/MAT220E/11/solucion.tex
@@ -116,5 +116,18 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $f$ una función con segundas derivadas parciales continuas en todo $R^2$. El cambio de variables $x=uv$, $y=\dfrac{u^2-v^2}{2}$ transforma la función $f(x,y)$ en la función $g(u,v)$.
+\begin{enumerate}[a)]
+\item Calcule $\dfrac{\delta g}{\delta u}, \dfrac{\delta g}{\delta v}$ en terminos de las derivadas parciales de $f$.
+\item Si $f_{xx}(x,y) + f_{yy}(x,y) = 2$ para todo $(x,y) \in R^2$, determine las constantes $a,b \in \R$ tales que
+		$$a\dfrac{\delta^2g}{\delta u^2} - b\dfrac{\delta^2 g}{\delta v^2} = u^2 + v^2$$
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
