--- a/2019/2/MAT1620/4/enunciado.tex
+++ b/2019/2/MAT1620/4/enunciado.tex
@@ -22,6 +22,7 @@
 \usepackage{xpatch}
 \usepackage{tkz-euclide}
 \usetkzobj{all}
+\usepackage{tabto}
 \xpatchcmd{\tkzTabLine}{$0$}{$\bullet$}{}{}
 
 \setlength{\headheight}{10pt}
